--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "graphiql": "^5.2.2",
+    "graphql-yoga": "^5.17.1",
     "lucide-react": "^0.552.0",
     "next": "16.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "recharts": "^3.3.0",
+    "sql.js": "^1.13.0",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
@@ -36,6 +39,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/sql.js": "^1.4.9",
     "babel-plugin-react-compiler": "1.0.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
